--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "virtualroot/haiku-errors",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test.js",
     "minify": "terser haiku.js --output haiku.min.js"
   },
   "files": [
